--- a/css/style.css
+++ b/css/style.css
@@ -1,77 +1,266 @@
-{
+/* CSS Document */
+*{
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
+}
+.space{
+	padding-top: 77px;
+}
+body{
+	font-family: 'Poppins', sans-serif;
+}
+.container{
+	width: 1360px;
+	margin: 0 auto;
+/*	background: green;*/
 }
 #wrapper{
-	width: 965px;
-	height: 1150px;
-	background: white;
+	width: 1920px;
+	height: 4705px;
 	margin: 0 auto;
 }
-.header{
-	width: 965px;
-	height: 170px;
-	background: red;
+#header{
+	width: 1920px;
+	height: 160px;
+/*	background: red;*/
 }
-.top-bar{
-	width: 965px;
-	height: 55px;
-	background: black;
-}
-.top-bar img{
-	margin-top: 12.5px;
-	width: 30px;
-	float: right;
-	margin-right: 5px;
-}
-.header-main{
-	width: 965px;
-	height: 115px;
-	background: yellow;
-}
-.header-main .logo img{
-	width: 153px;
-	margin-bottom: auto;
-}
-.header-main .logo{
-	width: 345px;
-	height: 115px;
+.logo{
+	width: 50%;
+	height: 160px;
+/*	background: aqua;*/
 	float: left;
-	background: #2cb1eb;
 }
-.header-main .menu{
-	width: 620px;
-	height: 115px;
+.logo img{
+	width: 50%;
+	height: 160px;
+	margin-bottom: 0 auto;
+}
+.menu{
+	width: 50%;
+	height: 160px;
+/*	background: #05AD61;*/
 	float: right;
-	background: blue;
 }
-.header-main .menu ul{
+.menu ul{
 	list-style: none;
-	width: 580px;
-	height: 50px;
+	margin-top: 80px;
 }
-.header-main .menu ul li{
+.menu ul li{
 	float: left;
-	margin-left: 100px;
-	width: 50px;
+	width: 156px;
+	height: 55px;
+/*	border: 1px solid black;*/
+	text-align: center;
+	line-height: 63px;
+	margin-left: 10px;
+	border-radius: 30px;
+}
+.menu ul li a{
+	text-decoration: none;
+	font-size: 20px;
+	color: black;
+/*	background: red;*/
+	display: block;
+	transition-duration: 0.2s;
+	border: 1px solid transparent;
+	border-radius: 30px;
+}
+.menu ul li a:hover{
+	border: 1px solid #9A1F21;
+	border-radius: 30px;
+}
+/*header*/
+#content{
+	width: 1920px;
+	height: 2979px;
+/*	background: blue;*/
+}
+.banner{
+	width: 1920px;
+	height: 830px;
+/*	background: red;*/
+}
+.banner-left{
+	width: 1116px;
+	height: 830px;
+/*	background: green;*/
+	float: left;
+}
+.banner-left img{
+	width: 1116px;
+	height: 700px;
+	margin-top: 82px;
+}
+.banner-right{
+	width: 804px;
+	height: 830px;
+	background: #FDFDFD;
+	float: right;
+}
+.banner-right .text{
+	margin-top: 220px;
+	width: 720px;
+	height: 550px;
+/*	background: red;*/
+	margin-bottom: 0 auto;
+}
+.text h2{
+	font-size: 25px;
+}
+.text button{
+	width: 220px;
+	height: 60px;
+	border: 1px solid #000000;
+	border-radius: 30px;
+}
+.text button:hover{
+	background: #1769ff;
+	color: white;
+	border-radius: 30px;
+	cursor: pointer;
+}
+.row-container {
+	width: 100%;
+	height: 987px;
+/*	background: pink;*/
+}
+
+.picture {
+	width: 1920px;
+	height: 1163px;
+/*	background: grey;*/
+	padding-top: 130px;
+}
+
+.title {
+	width: 285px;
+	height: 49px;
+/*	background: blue;*/
+	margin: 0 auto;
+}
+.picture .title h1{
+	font-size: 50px;
+	margin: 0 auto;
+}
+.picture .box-img{
+	width: 435px;
+	height: 415px;
+	background: aqua;
+	float: left;
+	margin-left: 15px;
+	margin-bottom: 30px;
+}
+.picture .box-img img{
+	width: 435px;
+	height: 415px;
+}
+.loi-nhan {
+	width: 1920px;
+	height: 356px;
+/*	background: red;*/
+}
+.loi-nhan-1 {
+	width: 70%;
+	height: 356px;
+/*	background: yellow;*/
+	float: left;
+	padding-top: 123px;
+	padding-left: 90px;
+	padding-right: 10px;
+}
+.loi-nhan-1 h1{
+	font-size: 34px;
+	font-weight: lighter;
+}
+.loi-nhan-1 p{
+	font-size: 16px;
+	margin-top: 30px;
+}
+.loi-nhan-2 {
+	width: 30%;
+	height: 356px;
+/*	background: blue;*/
+	float: right;
+	padding-top: 150px;
+}
+.loi-nhan-2 button{
+	width: 180px;
+	height: 60px;
+	background: none;
+	border: 2px solid #BD1417;
+	border-radius: 30px;
+}
+.loi-noi-va-cau-hoi{
+	width: 1030px;
+	height: 555px;
+/*	background: red;*/
+	text-align: center;
+	margin: 0 auto;
+	padding-left: 190px;
+	padding-right: 190px;
+}
+.loi-noi-va-cau-hoi h1{
+	font-size: 50px;
+	font-weight: lighter;
+}
+.loi-noi-va-cau-hoi img{
+	margin-top: 30px;
+}
+.loi-noi-va-cau-hoi span{
+	margin-bottom: 20px;
+}
+/*content*/
+#footer{
+	width: 1920px;
+	height: 440px;
+/*	background: yellow;*/
+}
+.top-footer{
+	width: 1920px;
+	height: 320px;
+/*	background: blue;*/
+}
+.bottom-footer{
+	width: 1920px;
+	height: 320px;
+/*	background: red;*/
+}
+.top-footer .footer-1{
+	width: 765px;
+	height: 260px;
+/*	background: green;*/
+	margin: 0 auto;
+}
+.footer-1 ul{
+	list-style: none;
+}
+.footer-1 ul li{
+	display: inline-block;
+	margin-left: 45px;
+	margin-top: 105px;
+}
+.footer-1 ul li a{
+	font-size: 18px;
+	text-decoration: none;
+	color: #222222;
+}
+.footer-1 ul li a:hover{
+	color: blue;
+}
+.footer-1 .search input{
+	width: 240px;
+	height: 50px;
+	border: 1px solid black;
+	border-radius: 50px;
+	font-size: 20px;
+	padding-left: 20px;
+}
+.bottom-footer p{
+	margin-top: 30px;
+	font-size: 16px;
 	text-align: center;
 }
-.header-main .menu ul li a{
-	text-decoration: none;
-	color: white;
-	font-size: 20px
-}
-.header-main .menu ul li a:hover{
-	color: aqua;
-	box-shadow: 25px 10px 5px -5px rgba(0,0,0,0.75);
-}
-/*Header*/
-.banner{
-	width: 965px;
-	height: 480px;
-	background: white;
-}
-.banner img{
-	width: 200px;
-	height: 295px;
+.lala{
+	height: 50px;
 }
